tests/fixtures/invalid/config/app.php
<?php

return [
    'valid_key' => 'Testing',
    'env' => 'testing',

    'nested' => [
        'valid_nested_key' => 'Nested Testing',
    ],
];
